<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/markdown_edit_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wbrawner.simplemarkdown.view.fragment.EditFragment">

    <EditText
        android:id="@+id/markdown_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="top"
        android:fontFamily="monospace"
        android:hint="@string/markdown_here"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textMultiLine|textCapSentences"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="16dp"
        android:scrollHorizontally="false"
        android:importantForAutofill="no" />
</androidx.core.widget.NestedScrollView>
